--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!--Icons-->
     <link rel="stylesheet" type="text/css" href="./FontAwesome/css/all.min.css">
 
-    <!--Font name-->
+    <!--Font title-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Italianno&display=swap" rel="stylesheet">
@@ -27,6 +27,16 @@
 
     <!--Animation-->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
+    <!--FavIcon-->
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
+    <link rel="manifest" href="./favicon/site.webmanifest">
+
+    <!--Carousel-->
+    <link rel="stylesheet" href="./CSS/owl.carousel.min.css">
+    <link rel="stylesheet" href="./CSS/owl.theme.default.min.css">
 
     <!--CSS-->
     <link rel="stylesheet" href="./CSS/style.css">
@@ -41,6 +51,12 @@
                     <i class="fas fa-bars"></i>
                 </button> <!--navbar-button-->
             </div> <!--navbar-header-->
+
+            <button type="button" class="button-icon">
+                <a class="whatsapp-button" href="https://wa.link/sbfouz" target="_blank">
+                    <i class="fab fa-whatsapp"></i>
+                </a>
+            </button> <!--whatsapp-button-->
 
             <ul class="navbar-list">
                 <li>
@@ -115,7 +131,10 @@
             <br>
             <ul class="services-items" data-aos="fade-right">
                 <li>
-                    <p class="services-item">Psicotersapia Individual &#40;Adolescentes e Adultos&#41;</p>
+                    <p class="services-item">Psicoterapia Individual &#40;Adolescentes e Adultos&#41;</p>
+                </li>
+                <li>
+                    <p class="services-item">Atendimento Online e Presencial</p>
                 </li>
                 <li>
                     <p class="services-item">Palestras</p>
@@ -187,25 +206,25 @@
         <div id="depositions">
             <h2 class="depositions-title" data-aos="fade-right">Depoimentos</h2>
 
-            <div class="radio-items">
+            <div class="radio-items" data-aos="fade-right">
                 <input type="radio" name="alternative" id="text1" checked>
                 <label class="texts-html" for="text1">
                     <br>
                     <div class="slide-icons">
-                        <i class="fa-solid fa-user"></i>
-                        <p class="slide-names">K. C.</p>
+                        <i class="fa-solid fa-user" data-aos="fade-right"></i>
+                        <p class="slide-names" data-aos="fade-right">K. C.</p>
                     </div>
                     <br>
-                    <p class="slide-description">
+                    <p class="slide-description" data-aos="fade-right">
                         Sou mãe de dois pacientes. Sou muito grata a Deus por tê-la como psicóloga dos meus filhos, uma
                         pessoa muito profissional e muito discreta, doce e amável, estou plenamente satisfeita com seu
                         profissionalismo.
                     </p>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star" data-aos="fade-right"></i>
+                    <i class="fa-solid fa-star" data-aos="fade-right"></i>
+                    <i class="fa-solid fa-star" data-aos="fade-right"></i>
+                    <i class="fa-solid fa-star" data-aos="fade-right"></i>
+                    <i class="fa-solid fa-star" data-aos="fade-right"></i>
                 </label>
 
                 <input type="radio" name="alternative" id="text2">
@@ -267,9 +286,49 @@
                 </label>
             </div>
 
-            <p class="alternative-text"></p>
+            <p class="alternative-text hidden"></p>
         </div> <!--depositions-->
     </div> <!--container-2-->
+
+    <div class="container-3">
+        <div class="form-texts">
+            <h3 class="form-text">Digite suas informações para que possamos <span class="form-text-2">entrar em contato
+                    com você!</span></h3>
+            <p class="form-underline">________</p>
+        </div>
+
+        <div class="form">
+            <form action="https://formsubmit.co/kamillademeloalves@gmail.com" method="POST">
+                <input type="hidden" name="_next" value="http://127.0.0.1:5500/submit.html">
+                <label for="name">Digite seu nome:</label>
+                <br>
+                <input type="text" placeholder="Ex.: João Silva" required name="name">
+                <br>
+                <br>
+                <label for="number">Digite seu número de telefone:</label>
+                <br>
+                <input type="number" placeholder="Ex.: (99) 9999-9999" required name="number">
+                <br>
+                <br>
+                <label for="email">Digite seu melhor e-mail:</label>
+                <br>
+                <input type="email" placeholder="Ex.: exemplo@email.com" name="email">
+                <br>
+                <br>
+                <button class="form-button" type="submit">Enviar</button>
+            </form>
+        </div> <!--form-->
+    </div> <!--container-3-->
+
+    <div id="instafeed" class="owl-carousel owl-theme owl-loaded owl-drag"></div>
+
+    <div id="location" class="location">
+        <h1 class="location-title">Localização</h1>
+        <iframe class="location-map"
+            src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d378.89215580921973!2d-49.24489488466295!3d-16.826675113800174!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTbCsDQ5JzM2LjAiUyA0OcKwMTQnNDEuMyJX!5e0!3m2!1spt-BR!2sbr!4v1685407990875!5m2!1spt-BR!2sbr"
+            allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <p class="location-description">Av das Nações<br>Qd 11 Lt 14<br>Bairro Vera Cruz - Aparecida de Goiânia-GO<br>CEP: 74976-190</p>
+    </div>
 
     <footer class="footer">
         <div class="footer-items">
@@ -297,6 +356,7 @@
         </p>
     </footer>
 
+    <!--Animations-->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
         AOS.init({
@@ -304,8 +364,49 @@
         });
     </script>
 
+    <!--Scripts-->
+
     <script src="./JS/script.js"></script>
     <script src="./JS/slider.js"></script>
+
+    <script src="./JS/jquery.min.js"></script>
+    <script src="./JS/owl.carousel.min.js"></script>
+
+    <!--InstaFeed-->
+    <script type="text/javascript" src="./JS/instafeed.min.js"></script>
+
+    <script type="text/javascript">
+        var feed = new Instafeed({
+            accessToken: 'IGQVJXekRwY0pLdk1VY1NxU05lQ25fdDA3Tlg1MWJwanktX2lHZA0VxZAk16RTF1aGYzMmRwTDI5ejdVOHMyQ21mT3FYVkFUOVd5M1QwVmxQY05VTmUyV1RIY2tHM2J1cGV3M0ttQkMyamVaUlBfWXg4MwZDZD',
+            limit: 8,
+            template: '<div class="item"><a href="{{link}}" target="_blank"><img title="{{caption}}" src="{{image}}" /></a></div>',
+
+            after: function(){
+                $('.owl-carousel').owlCarousel({
+    loop:true,
+    margin:10,
+    responsiveClass:true,
+    responsive:{
+        0:{
+            items:1,
+            nav:true
+        },
+        600:{
+            items:3,
+            nav:false
+        },
+        1000:{
+            items:4,
+            nav:true,
+            loop:false
+        }
+    }
+})
+            }
+        });
+
+        feed.run();
+    </script>
 </body>
 
 </html>
